--- a/streamlit_v5/test.ipynb
+++ b/streamlit_v5/test.ipynb
@@ -3,74 +3,80 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "import yolo_v5.detect as detect\n",
-    "from PIL import Image, ImageEnhance"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "import yolo_v5.detect as detect\n",
+    "from PIL import Image, ImageEnhance"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "NameError",
      "evalue": "name 'detect' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn [3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mdetect\u001B[49m\u001B[38;5;241m.\u001B[39mrun()\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'detect' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdetect\u001b[49m\u001b[38;5;241m.\u001b[39mrun()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'detect' is not defined"
      ]
     }
    ],
    "source": [
     "detect.run()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   },
    "outputs": [
     {
      "ename": "TypeError",
      "evalue": "main() takes 1 positional argument but 2 were given",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn [10], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mdetect\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmain\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mC:\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mDataScience\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mT3Q\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mdata\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mPothole_dataset\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mPothole_test_2.mp4\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m      2\u001B[0m \u001B[43m                                                       \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mC:\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mDataScience\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mT3Q\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43myolo_v5\u001B[39;49m\u001B[38;5;130;43;01m\\r\u001B[39;49;00m\u001B[38;5;124;43muns\u001B[39;49m\u001B[38;5;130;43;01m\\t\u001B[39;49;00m\u001B[38;5;124;43mrain\u001B[39;49m\u001B[38;5;130;43;01m\\t\u001B[39;49;00m\u001B[38;5;124;43mrain_results\u001B[39;49m\u001B[38;5;124;43m\\\u001B[39;49m\u001B[38;5;124;43mweights\u001B[39;49m\u001B[38;5;130;43;01m\\b\u001B[39;49;00m\u001B[38;5;124;43mest.pt\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "\u001B[1;31mTypeError\u001B[0m: main() takes 1 positional argument but 2 were given"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdetect\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mC:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mDataScience\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mT3Q\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mdata\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mPothole_dataset\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mPothole_test_2.mp4\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                                                       \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mC:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mDataScience\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mT3Q\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43myolo_v5\u001b[39;49m\u001b[38;5;130;43;01m\\r\u001b[39;49;00m\u001b[38;5;124;43muns\u001b[39;49m\u001b[38;5;130;43;01m\\t\u001b[39;49;00m\u001b[38;5;124;43mrain\u001b[39;49m\u001b[38;5;130;43;01m\\t\u001b[39;49;00m\u001b[38;5;124;43mrain_results\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mweights\u001b[39;49m\u001b[38;5;130;43;01m\\b\u001b[39;49;00m\u001b[38;5;124;43mest.pt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: main() takes 1 positional argument but 2 were given"
      ]
     }
    ],
    "source": [
     "detect.main(source='C:\\DataScience\\T3Q\\data\\Pothole_dataset\\Pothole_test_2.mp4',\n",
     "                                                       weight='C:\\DataScience\\T3Q\\yolo_v5\\runs\\train\\train_results\\weights\\best.pt')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -206,12 +212,14 @@
       "video 1/1 (124/125) C:\\DataScience\\T3Q\\streamlit\\123.mp4: 384x640 4 Pothole on roads 121.2ms\n",
       "video 1/1 (125/125) C:\\DataScience\\T3Q\\streamlit\\123.mp4: 384x640 6 Pothole on roads 122.0ms\n",
       "Speed: 0.3ms pre-process, 111.3ms inference, 0.8ms NMS per image at shape (1, 3, 640, 640)\n",
-      "Results saved to \u001B[1myolo_v5\\runs\\detect\\exp3\u001B[0m\n"
+      "Results saved to \u001b[1myolo_v5\\runs\\detect\\exp3\u001b[0m\n"
      ]
     },
     {
      "data": {
-      "text/plain": "(0, 0)"
+      "text/plain": [
+       "(0, 0)"
+      ]
      },
      "execution_count": 2,
      "metadata": {},
@@ -220,21 +228,23 @@
    ],
    "source": [
     "detect.run(source='C:\\DataScience\\T3Q\\streamlit/123.mp4')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "False"
+      "text/plain": [
+       "False"
+      ]
      },
      "execution_count": 17,
      "metadata": {},
@@ -244,21 +254,71 @@
    "source": [
     "temp = cv2.imread('C:\\DataScience\\T3Q\\streamlit\\V3F_HY_9073_20201105_082630_N_CH1_Seoul_Sun_Mainroad_Day_90667.png')\n",
     "cv2.imwrite('C:\\DataScience\\T3Q\\streamlit\\temp/temp.png', temp)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[[15, 34, 50],\n        [13, 32, 48],\n        [15, 34, 50],\n        ...,\n        [28, 36, 49],\n        [28, 36, 49],\n        [28, 36, 49]],\n\n       [[14, 34, 49],\n        [13, 32, 48],\n        [15, 34, 50],\n        ...,\n        [28, 36, 49],\n        [28, 36, 49],\n        [28, 36, 49]],\n\n       [[15, 34, 50],\n        [13, 32, 48],\n        [15, 34, 50],\n        ...,\n        [28, 36, 49],\n        [28, 36, 49],\n        [28, 36, 49]],\n\n       ...,\n\n       [[31, 28, 22],\n        [31, 28, 22],\n        [31, 28, 22],\n        ...,\n        [38, 35, 28],\n        [38, 35, 28],\n        [38, 35, 28]],\n\n       [[33, 30, 24],\n        [33, 30, 24],\n        [33, 30, 24],\n        ...,\n        [38, 35, 28],\n        [38, 35, 28],\n        [38, 35, 28]],\n\n       [[35, 31, 25],\n        [35, 31, 25],\n        [35, 31, 25],\n        ...,\n        [38, 35, 28],\n        [38, 35, 28],\n        [38, 35, 28]]], dtype=uint8)"
+      "text/plain": [
+       "array([[[15, 34, 50],\n",
+       "        [13, 32, 48],\n",
+       "        [15, 34, 50],\n",
+       "        ...,\n",
+       "        [28, 36, 49],\n",
+       "        [28, 36, 49],\n",
+       "        [28, 36, 49]],\n",
+       "\n",
+       "       [[14, 34, 49],\n",
+       "        [13, 32, 48],\n",
+       "        [15, 34, 50],\n",
+       "        ...,\n",
+       "        [28, 36, 49],\n",
+       "        [28, 36, 49],\n",
+       "        [28, 36, 49]],\n",
+       "\n",
+       "       [[15, 34, 50],\n",
+       "        [13, 32, 48],\n",
+       "        [15, 34, 50],\n",
+       "        ...,\n",
+       "        [28, 36, 49],\n",
+       "        [28, 36, 49],\n",
+       "        [28, 36, 49]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[31, 28, 22],\n",
+       "        [31, 28, 22],\n",
+       "        [31, 28, 22],\n",
+       "        ...,\n",
+       "        [38, 35, 28],\n",
+       "        [38, 35, 28],\n",
+       "        [38, 35, 28]],\n",
+       "\n",
+       "       [[33, 30, 24],\n",
+       "        [33, 30, 24],\n",
+       "        [33, 30, 24],\n",
+       "        ...,\n",
+       "        [38, 35, 28],\n",
+       "        [38, 35, 28],\n",
+       "        [38, 35, 28]],\n",
+       "\n",
+       "       [[35, 31, 25],\n",
+       "        [35, 31, 25],\n",
+       "        [35, 31, 25],\n",
+       "        ...,\n",
+       "        [38, 35, 28],\n",
+       "        [38, 35, 28],\n",
+       "        [38, 35, 28]]], dtype=uint8)"
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -267,21 +327,23 @@
    ],
    "source": [
     "cv2.imread('C:\\DataScience\\T3Q\\streamlit\\V3F_HY_9073_20201105_082630_N_CH1_Seoul_Sun_Mainroad_Day_90667.png')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": [
+       "True"
+      ]
      },
      "execution_count": 19,
      "metadata": {},
@@ -290,100 +352,99 @@
    ],
    "source": [
     "cv2.imwrite('C:/DataScience/T3Q/streamlit/temp/temp.jpg', temp)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "outputs": [],
-   "source": [
-    "IMG = Image.open('C:\\DataScience\\T3Q\\streamlit\\V3F_HY_9073_20201105_082630_N_CH1_Seoul_Sun_Mainroad_Day_90667.png')"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "IMG = Image.open('C:\\DataScience\\T3Q\\streamlit\\V3F_HY_9073_20201105_082630_N_CH1_Seoul_Sun_Mainroad_Day_90667.png')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "AttributeError",
      "evalue": "flush",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn [25], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mcv2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mimread\u001B[49m\u001B[43m(\u001B[49m\u001B[43mIMG\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\DataScience\\T3Q\\streamlit\\yolo_v5\\utils\\general.py:1090\u001B[0m, in \u001B[0;36mimread\u001B[1;34m(path, flags)\u001B[0m\n\u001B[0;32m   1089\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mimread\u001B[39m(path, flags\u001B[38;5;241m=\u001B[39mcv2\u001B[38;5;241m.\u001B[39mIMREAD_COLOR):\n\u001B[1;32m-> 1090\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m cv2\u001B[38;5;241m.\u001B[39mimdecode(\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfromfile\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43muint8\u001B[49m\u001B[43m)\u001B[49m, flags)\n",
-      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\EV_PY38_YOLO\\lib\\site-packages\\PIL\\Image.py:517\u001B[0m, in \u001B[0;36mImage.__getattr__\u001B[1;34m(self, name)\u001B[0m\n\u001B[0;32m    515\u001B[0m     deprecate(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mImage categories\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m10\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mis_animated\u001B[39m\u001B[38;5;124m\"\u001B[39m, plural\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m    516\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_category\n\u001B[1;32m--> 517\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(name)\n",
-      "\u001B[1;31mAttributeError\u001B[0m: flush"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mIMG\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mC:\\DataScience\\T3Q\\streamlit\\yolo_v5\\utils\\general.py:1090\u001b[0m, in \u001b[0;36mimread\u001b[1;34m(path, flags)\u001b[0m\n\u001b[0;32m   1089\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mimread\u001b[39m(path, flags\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mIMREAD_COLOR):\n\u001b[1;32m-> 1090\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m cv2\u001b[38;5;241m.\u001b[39mimdecode(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfromfile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muint8\u001b[49m\u001b[43m)\u001b[49m, flags)\n",
+      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\envs\\EV_PY38_YOLO\\lib\\site-packages\\PIL\\Image.py:517\u001b[0m, in \u001b[0;36mImage.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    515\u001b[0m     deprecate(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImage categories\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis_animated\u001b[39m\u001b[38;5;124m\"\u001b[39m, plural\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    516\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_category\n\u001b[1;32m--> 517\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: flush"
      ]
     }
    ],
    "source": [
     "cv2.imread('C:\\DataScience\\T3Q\\streamlit\\V3F_HY_9073_20201105_082630_N_CH1_Seoul_Sun_Mainroad_Day_90667.png')\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "outputs": [],
-   "source": [
-    "vid = cv2.VideoCapture('C:\\DataScience\\T3Q\\streamlit\\123.mp4')"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "vid = cv2.VideoCapture('C:\\DataScience\\T3Q\\streamlit\\123.mp4')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
